crates/toml_edit/tests/fixtures/invalid/inline-table/empty.stderr
TOML parse error at line 1, column 6
  |
1 | t = {,}
  |      ^
Invalid inline table
Expected `}`
